--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -1,3 +1,7 @@
+# data/mark.yaml
+# yaml-language-server: $schema=../packages/schema/schema/mark.schema.json
+# @metaType mark
+# @version 1.0.0
 - id: mark_meihuo
   num: 1
   name: 魅惑
