--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -1,3 +1,7 @@
+# data/mark_emblem.yaml
+# yaml-language-server: $schema=../packages/schema/schema/mark.schema.json
+# @metaType mark
+# @version 1.0.0
 - id: mark_emblem_zhuiji
   name: 追击
   description: 使弱点记号复制到对手下一只精灵上
