--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -1,3 +1,7 @@
+# data/mark_ability.yaml
+# yaml-language-server: $schema=../packages/schema/schema/mark.schema.json
+# @metaType mark
+# @version 1.0.0
 - id: mark_ability_zhongjie
   name: 终结
   description: 体力低于1/4以下时消耗弱点记号的技能造成的伤害增加25%
