--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -2,458 +2,459 @@
 # yaml-language-server: $schema=../packages/schema/schema/mark.schema.json
 # @metaType mark
 # @version 1.0.0
+
 - id: mark_meihuo
-  num: 1
   name: 魅惑
   description: 2回合无法行动 被攻击不会闪避
+  num: 1
   image_link: =DISPIMG("ID_045453E85D744956AF560D592FA17F6E",1)
 - id: mark_haipa
-  num: 2
   name: 害怕
   description: 2回合无法行动 被攻击不会闪避
+  num: 2
   image_link: =DISPIMG("ID_F5C74BFDB2B74FE18C2BFE86413E6F8F",1)
 - id: mark_tanhuan
-  num: 3
   name: 瘫痪
   description: 2回合无法行动 被攻击会复原
+  num: 3
   image_link: =DISPIMG("ID_5930268B07384E46AD3A75B18A89C581",1)
 - id: mark_mabi
-  num: 4
   name: 麻痹
   description: 5回合攻击时有40%几率被迫中断
+  num: 4
   image_link: =DISPIMG("ID_AEF7CF49D67D46E38C10A10062262E0D",1)
 - id: mark_hunmi
-  num: 5
   name: 昏迷
   description: 2回合无法行动 被攻击不会闪避
+  num: 5
   image_link: =DISPIMG("ID_3E74CA8814974469A1CA4E3A4913084B",1)
 - id: mark_shuimian
-  num: 6
   name: 睡眠
   description: 2回合无法行动 被攻击会苏醒
+  num: 6
   image_link: =DISPIMG("ID_44EC71C0C05642BBB5462320A1302E95",1)
 - id: mark_shihua
-  num: 7
   name: 石化
   description: 2回合无法行动 受到致命几率提升10% 被暴击会解除
+  num: 7
   image_link: =DISPIMG("ID_76BC4821D9CB4E9FA6548930C2F42E91",1)
 - id: mark_zhixi
-  num: 8
   name: 窒息
   description: 2回合无法行动
+  num: 8
   image_link: =DISPIMG("ID_05DAC94A46394687AF54C500237C0F65",1)
 - id: mark_bingdong
-  num: 9
   name: 冰冻
   description: 2回合无法行动 受到暴击伤害提升20% 被暴击会解冻
+  num: 9
   image_link: =DISPIMG("ID_BB8FF480143C418085E1D67D709AE945",1)
 - id: mark_kongju
-  num: 10
   name: 恐惧
   description: 2回合随机在可用技能中出招 受到超过100点伤害会清醒
+  num: 10
   image_link: =DISPIMG("ID_777A22E1E7E24C819F78D68B0DF000C5",1)
 - id: mark_zuzhou
-  num: 11
   name: 诅咒
   description: 3回合后对手会在异常状态中随机获得一种 对手换下精灵不保留
+  num: 11
   image_link: =DISPIMG("ID_AAE62D004C4F4F2BB4D022D1D1665C6C",1)
 - id: mark_taobi
-  num: 12
   name: 逃避
   description: 2回合不能行动也不会受到伤害
+  num: 12
   image_link: =DISPIMG("ID_85F2FDA49BB54ECA8A35326C82A27CE3",1)
 - id: mark_hunluan
-  num: 13
   name: 混乱
   description: 下一回合对手使用攻击技能 此技能将作用于自身
+  num: 13
   image_link: =DISPIMG("ID_573EB1AB24F543D7BE78436498DEFB60",1)
 - id: mark_chenmo
-  num: 14
   name: 沉默
   description: 对手的属性技能失效
+  num: 14
   image_link: =DISPIMG("ID_A280A64B4B134FF2BE8DC1D106BFEB2D",1)
 - id: mark_jingu
-  num: 15
   name: 禁锢
   description: 2回合使物攻技能失效 不会闪避攻击性技能
+  num: 15
   image_link: =DISPIMG("ID_80E539FED0FC43A6B0B05B680568CF32",1)
 - id: mark_xuankong
-  num: 16
   name: 悬空
   description: 1回合无法行动 不会闪避攻击性技能
+  num: 16
   image_link: =DISPIMG("ID_DC7B1C5143FD4525B7C193560ABDF546",1)
 - id: mark_lijie
-  num: 17
   name: 力竭
   description: 1回合无法行动
+  num: 17
   image_link: =DISPIMG("ID_1432470AB656453CBB103A34E76D6C0C",1)
 - id: mark_meimeng
-  num: 18
   name: 美梦
   description: 2回合无法行动 受到伤害会被惊醒 惊醒后恢复自由行动
+  num: 18
   image_link: =DISPIMG("ID_DD56587A5A304B7998902846CA6C9BDA",1)
 - id: mark_tingzhi
-  num: 19
   name: 停滞
   description: 1回合无法行动
+  num: 19
   image_link: =DISPIMG("ID_ACF3CFB4A6EF4911B574A40CD613668F",1)
 - id: mark_jinbi
-  num: 21
   name: 禁闭
   description: 无法使用属性技能(释放属性技能时无法行动) 持续2回合
+  num: 21
   image_link: =DISPIMG("ID_966E8E13DE6D4A2C8E28B07A40456C90",1)
 - id: mark_shixiao
-  num: 23
   name: 失效
   description: 使对手特攻技能失效 无法闪避攻击性技能
+  num: 23
   image_link: =DISPIMG("ID_1CD660AD71A8471EA2F217915808C351",1)
 - id: mark_pibei
-  num: 24
   name: 疲惫
   description: 3回合无法攻击
+  num: 24
   image_link: =DISPIMG("ID_6679C28B106C442C972A6D7AD98653DC",1)
 - id: mark_nishui
-  num: 1000
   name: 溺水
   description: 3回合每回合损失1/8体力 并且命中率降低10%（对水系无效）
+  num: 1000
   image_link: =DISPIMG("ID_87610E281900458085D77BDB74E938E8",1)
 - id: mark_shaoshang
-  num: 1001
   name: 烧伤
   description: 3回合每回合损失1/8体力 并且造成的物理攻击伤害降低25%（对火系无效）
+  num: 1001
   image_link: =DISPIMG("ID_135E0F7DDB964C08B9AB0D0D434E1417",1)
 - id: mark_dongshang
-  num: 1002
   name: 冻伤
   description: 3回合每回合损失1/8体力 并且造成的特殊攻击伤害降低25%（对冰系无效）
+  num: 1002
   image_link: =DISPIMG("ID_5B72F7DFECF74B6B8FBF6EA3A84A8F45",1)
 - id: mark_zhongdu
-  num: 1003
   name: 中毒
   description: 3回合每回合损失1/8体力 并且受到的治疗效果降低15%
+  num: 1003
   image_link: =DISPIMG("ID_488C5E684E56445DAC70345DF420D9BA",1)
 - id: mark_liuxie
-  num: 1004
   name: 流血
   description: x回合每回合受到一定的固定伤害
+  num: 1004
   image_link: =DISPIMG("ID_E9B68855D0EE47C09DD3F057F3281C14",1)
 - id: mark_exin
-  num: 1005
   name: 恶心
   description: 2回合命中率降低50%
+  num: 1005
   image_link: =DISPIMG("ID_A51787F6228C463F83DA04708EDD5729",1)
 - id: mark_shiming
-  num: 1006
   name: 失明
   description: 2回合命中率降低50%
+  num: 1006
   image_link: =DISPIMG("ID_FE9FD6F3674D4A65BD776A2B361D449B",1)
 - id: mark_jisheng
-  num: 1007
   name: 寄生
   description: 每回合吸收对手当前体力的1/8 恢复量不超过自身最大体力的1/8 （对草系无效）
+  num: 1007
   image_link: =DISPIMG("ID_FF6330D99D69434B993C5BE765F2F018",1)
 - id: mark_manxingduyao
-  num: 1008
   name: 慢性毒药
   description: 3回合每回合减少对手10点体力 可叠加10层
+  num: 1008
   image_link: =DISPIMG("ID_F6252B2618AB40F0A63704B16F26D3C2",1)
 - id: mark_diaoling
-  num: 1009
   name: 凋零
   description: 每回合减少35体力 直到体力低于1/2时结束
+  num: 1009
   image_link: =DISPIMG("ID_A3D9520D2106487281ED11C769265A2A",1)
 - id: mark_jibing
-  num: 1010
   name: 疾病
   description: 每回合损失15点体力 受到的物攻伤害增加25% 第一个获得疾病的精灵为传染源 主动替换将传染给下一只精灵
+  num: 1010
   image_link: =DISPIMG("ID_FB3D1011AF8646918AEAD14AE1F7F86F",1)
 - id: mark_tangshang
-  num: 1011
   name: 烫伤
   description: 3回合 受到特殊攻击时会减少自身1/8的体力
+  num: 1011
   image_link: =DISPIMG("ID_13DB1F9D4CA443F48354A8FDD8CC3FC8",1)
 - id: mark_chanrao
-  num: 1012
   name: 缠绕
   description: 体力低于1/2时 每回合减少35点体力 对手体力高于1/2时无效
+  num: 1012
   image_link: =DISPIMG("ID_08B6D588F85649D9B03DA5E23F7E7C39",1)
 - id: mark_ranshao
-  num: 1013
   name: 燃烧
   description: 每回合减少20点体力
+  num: 1013
   image_link: =DISPIMG("ID_241FA81878F9424DA8656ABF69B316A4",1)
 - id: mark_ganlie
-  num: 1014
   name: 干裂
   description: 3回合每回合失去1/8体力 并且命中降低10%（对风系无效）
+  num: 1014
   image_link: =DISPIMG("ID_E41B6DD5B5644D75AFA62D0C829CC793",1)
 - id: mark_shashi
-  num: 1015
   name: 沙蚀
   description: 3回合内受到伤害增加50%
+  num: 1015
   image_link: =DISPIMG("ID_074957D3C19445F1B574C9C652D85ADB",1)
 - id: mark_xingshi
-  num: 1016
   name: 星噬
   description: 每回合失去8点体力 至多5层
+  num: 1016
   image_link: =DISPIMG("ID_6E79EB580D4642CEB1893283DFDE39A5",1)
 - id: mark_shixue
-  num: 1017
   name: 失血
   description: 每回合失去300点体力
+  num: 1017
   image_link: =DISPIMG("ID_328986E8E9464FA1981EEA6EDD36997B",1)
 - id: mark_zhongshang
-  num: 1018
   name: 重伤
   description: 3回合后失去200点体力 换场保留
+  num: 1018
   image_link: =DISPIMG("ID_449FC39A1988446A865EF0709F96C92B",1)
 - id: mark_shixuechong
-  num: 1019
   name: 嗜血虫
   description: 每层每回合使对手损失10点体力恢复自身 最多叠加10层
+  num: 1019
   image_link: =DISPIMG("ID_C1CA1DC6B7324EA4B0D0714AD2D56B0B",1)
 - id: mark_ruodianjihao
-  num: 3000
   name: 弱点记号
-  description: ''
+  description: ""
+  num: 3000
   image_link: =DISPIMG("ID_F4DE2FABEC114FB498CA90C6A6861C41",1)
 - id: mark_yishang
-  num: 3001
   name: 易伤
   description: 受到的所有伤害增加50%
+  num: 3001
   image_link: =DISPIMG("ID_517045BBE88347D990FC59EBD51EDC69",1)
 - id: mark_jishengzhadan
-  num: 3002
   name: 寄生炸弹
   description: 3回合后对手受到300点固定伤害（若精灵换场则不保留）
+  num: 3002
   image_link: =DISPIMG("ID_984DC8987FF94528A26B6759E34D82C1",1)
 - id: mark_mihuo
-  num: 3003
   name: 迷惑
   description: 使对手下一次造成的伤害减半并且另一半由对手承担
+  num: 3003
   image_link: =DISPIMG("ID_E19FAF5DF6F04EB8906D2D62D33CF06B",1)
 - id: mark_kuihuazhongzi
-  num: 3004
   name: 葵花种子
   description: 5回合使对手造成的伤害减少15%
+  num: 3004
   image_link: =DISPIMG("ID_1A23AA727C8543C8904D1BA697B4493F",1)
 - id: mark_zengzhong
-  num: 3005
   name: 增重
   description: 使自身体重增加50KG 可叠加2层
+  num: 3005
   image_link: =DISPIMG("ID_FD4B52DBE71A4D38A31D57AF6161BA03",1)
 - id: mark_fandan
-  num: 3006
   name: 反弹
-  description: ''
+  description: ""
+  num: 3006
   image_link: =DISPIMG("ID_355C639548BB458E8C0025E389FE1975",1)
 - id: mark_teshushanghaizengjia
-  num: 3007
   name: 特殊伤害增加
-  description: ''
+  description: ""
+  num: 3007
   image_link: =DISPIMG("ID_15F5CAA2A9D44206B28E9956BA4C6CE9",1)
 - id: mark_wulishanghaizengjia
-  num: 3008
   name: 物理伤害增加
-  description: ''
+  description: ""
+  num: 3008
   image_link: =DISPIMG("ID_2EB0C0000C364C2194F4F0D7BECBD7CD",1)
 - id: mark_shuiwenzhenji
-  num: 3009
   name: 水纹震击
-  description: ''
+  description: ""
+  num: 3009
   image_link: =DISPIMG("ID_A4BFB836593E4DB1B13670A82D0AC671",1)
 - id: mark_xuanyun
-  num: 3010
   name: 眩晕
   description: 5回合使对手速度值减少50点
+  num: 3010
   image_link: =DISPIMG("ID_55CBBFC1E7474FD7B979A44B31B3F9ED",1)
 - id: mark_shoudaowulishanghaijianshao
-  num: 3011
   name: 受到物理伤害减少
-  description: ''
+  description: ""
+  num: 3011
   image_link: =DISPIMG("ID_EE5759E5CF3E43A1B93D0C2C9B36D87C",1)
 - id: mark_shoudaoteshushanghaijianban
-  num: 3012
   name: 受到特殊伤害减半
-  description: ''
+  description: ""
+  num: 3012
   image_link: =DISPIMG("ID_F487B3C05F564824B52D826E4439D0BE",1)
 - id: mark_mingzhongdixia
-  num: 3013
   name: 命中低下
   description: 命中下降15%
+  num: 3013
   image_link: =DISPIMG("ID_51DF4638C2674A8EAD992C8F19A231CB",1)
 - id: mark_weilitisheng
-  num: 3014
   name: 威力提升
   description: 除佯攻外的技能威力增加
+  num: 3014
   image_link: =DISPIMG("ID_19CCC30AC8BB440AAB82E7A1F4ECC4B6",1)
 - id: mark_bizhong
-  num: 3015
   name: 必中
   description: 技能必定命中对手
+  num: 3015
   image_link: =DISPIMG("ID_27F2DCB48FDC4B2AAECD5543E06A0F79",1)
 - id: mark_shanghaitisheng
-  num: 3016
   name: 伤害提升
   description: 使下一个伤害性技能造成的伤害增加100%
+  num: 3016
   image_link: =DISPIMG("ID_033CF0B6D763402D8F11D8C05CF92393",1)
 - id: mark_busi
-  num: 3017
   name: 不死
   description: 下一次受到致死攻击会剩下1点体力
+  num: 3017
   image_link: =DISPIMG("ID_806A297F1A2945EABD98659BFEC83822",1)
 - id: mark_huifu
-  num: 3018
   name: 恢复
   description: 每回合恢复一定量体力
+  num: 3018
   image_link: =DISPIMG("ID_9955E61177C74C038EC07F53603284B0",1)
 - id: mark_zhongzinengliang
-  num: 3019
   name: 种子能量
   description: 受到伤害减少20% 被攻击会减少1层
+  num: 3019
   image_link: =DISPIMG("ID_DB98F9427F804651A5D2B970F9FB22BC",1)
 - id: mark_shoushangfanbei
-  num: 3020
   name: 受伤翻倍
-  description: ''
+  description: ""
+  num: 3020
   image_link: =DISPIMG("ID_0A366DA80ACD4916AD300435203FB278",1)
 - id: mark_mingzhongtisheng
-  num: 3021
   name: 命中提升
   description: 命中率提升10%
+  num: 3021
   image_link: =DISPIMG("ID_9F259D5D10634A77A85896AA2A8F8C1F",1)
 - id: mark_weilibianhua
-  num: 3022
   name: 威力变化
-  description: ''
+  description: ""
+  num: 3022
   image_link: =DISPIMG("ID_43998118406F4C45B42BE855B871158B",1)
 - id: mark_shanbi
-  num: 3023
   name: 闪避
   description: 2回合内有2次闪避对手攻击的机会
+  num: 3023
   image_link: =DISPIMG("ID_4B717892DC7D48AE8228314A2CEE4C77",1)
 - id: mark_shiquweijue
-  num: 3024
   name: 失去味觉
   description: 属性攻击必中
+  num: 3024
   image_link: =DISPIMG("ID_4D4DBDD7069443F4A9DE380F6C310980",1)
 - id: mark_wulicao
-  num: 3025
   name: 无力草
   description: 造成特攻伤害减半
+  num: 3025
   image_link: =DISPIMG("ID_E1C5D4CC04CE4BF3A2FAAF323218B345",1)
 - id: mark_shanghaizhuanhua
-  num: 3026
   name: 伤害转化
-  description: ''
+  description: ""
+  num: 3026
   image_link: =DISPIMG("ID_8E2FD49C15854669ADFBF8E63131C6A1",1)
 - id: mark_jinzhenfenmo
-  num: 3027
   name: 金针粉末
   description: 造成伤害减半
+  num: 3027
   image_link: =DISPIMG("ID_88CF6D84E7714B5CB2C615F23D5C9D49",1)
 - id: mark_dixiaowulishanghai
-  num: 3028
   name: 抵消物理伤害
-  description: ''
+  description: ""
+  num: 3028
   image_link: =DISPIMG("ID_45FD93006AAA4A908BE3BB0574656E41",1)
 - id: mark_tizhongjiangdi
-  num: 3029
   name: 体重降低
-  description: ''
+  description: ""
+  num: 3029
   image_link: =DISPIMG("ID_97FB68C2894F4993995815203A888A21",1)
 - id: mark_fanshe
-  num: 3030
   name: 反射
-  description: ''
+  description: ""
+  num: 3030
   image_link: =DISPIMG("ID_5E266C3E1FC74E44BEDA5F92FAECA9D8",1)
 - id: mark_mianyiruohua
-  num: 3031
   name: 免疫弱化
   description: 免疫弱化
+  num: 3031
   image_link: =DISPIMG("ID_56C0464F7ED84C6991155E0B54AE94C9",1)
 - id: mark_hunzhuoshuiyu
-  num: 3032
   name: 浑浊水域
   description: 5回合使自身的能力下降类技能效果翻倍
+  num: 3032
   image_link: =DISPIMG("ID_923630E7F55C4B4FA6FFC86ECF0C53CE",1)
 - id: mark_judushenti
-  num: 3033
   name: 剧毒身体
   description: 5回合受到攻击时有50%几率使对手中毒
+  num: 3033
   image_link: =DISPIMG("ID_5C050B5EE41846D0A5CE2A2FD232E2D6",1)
 - id: mark_yuansuzhufu
-  num: 3034
   name: 元素祝福
   description: 下一次受到的伤害增加y%
+  num: 3034
   image_link: =DISPIMG("ID_16982F8120F2455ABCA3A65C1AF48B3D",1)
 - id: mark_xingzhili
-  num: 3036
   name: 星之力
   description: 不受负面影响
+  num: 3036
   image_link: =DISPIMG("ID_2F9563E3192447308594AFC97977DB24",1)
 - id: mark_mianyibuliang
-  num: 3037
   name: 免疫不良
   description: 免疫不良状态
+  num: 3037
   image_link: =DISPIMG("ID_AE7FBC87A22A49BF90683200C2E7779F",1)
 - id: mark_huoxishanghaizengjia
-  num: 3039
   name: 火系伤害增加
   description: 2回合使自身火系技能伤害增加70%
+  num: 3039
   image_link: =DISPIMG("ID_0D3D96B6228146E383AD24C040973E7A",1)
 - id: mark_zaochengshanghaijianshao
-  num: 3041
   name: 造成伤害减少
   description: 造成的伤害值减少30点 最多叠加2次
+  num: 3041
   image_link: =DISPIMG("ID_9D564BA029294F64966656F8C901AE15",1)
 - id: mark_shoudaoshanghaizengjia
-  num: 3042
   name: 受到伤害增加
-  description: ''
+  description: ""
+  num: 3042
   image_link: =DISPIMG("ID_BBEAF8AF528C4D8F8824189476A2CB62",1)
 - id: mark_suijixianzhi
-  num: 3043
   name: 随机先制
-  description: ''
+  description: ""
+  num: 3043
   image_link: =DISPIMG("ID_32F142DD36E441E896C1866AF52F9EA1",1)
 - id: mark_mianyiyichang
-  num: 3044
   name: 免疫异常
   description: 免疫异常状态
+  num: 3044
   image_link: =DISPIMG("ID_391BE16CBFE949AD936B3515C4764A91",1)
 - id: mark_xinzhiyinji
-  num: 3045
   name: 心之印记
-  description: ''
+  description: ""
+  num: 3045
   image_link: =DISPIMG("ID_411E3ECEC3F94F62A82B0E64AE0121A9",1)
 - id: mark_xuehongyinji
-  num: 3046
   name: 血红印记
-  description: ''
+  description: ""
+  num: 3046
   image_link: =DISPIMG("ID_6AC63F37F2D24FE4B0BF451C2F924109",1)
 - id: mark_texiaochufalvshangsheng
-  num: 3048
   name: 特效触发率上升
-  description: ''
+  description: ""
+  num: 3048
   image_link: =DISPIMG("ID_7E27E6CA301D41648288F2520793F99E",1)
 - id: mark_kongqichuliang
-  num: 3049
   name: 空气储量
   description: 空气填充
+  num: 3049
   image_link: =DISPIMG("ID_A29273FD69E1408CA91D6E25F1512104",1)
 - id: mark_yinbozhi
-  num: 3050
   name: 音波值
-  description: ''
+  description: ""
+  num: 3050
   image_link: =DISPIMG("ID_C5ACB7C9435842F1849E0180385EE14C",1)
 - id: mark_zaoyin
-  num: 3051
   name: 噪音
   description: 下一次攻击性技能命中改变X%
+  num: 3051
   image_link: =DISPIMG("ID_83CA7765FCC048C2B62380BC3D667C45",1)
 - id: mark_yinzhiwang
-  num: 3052
   name: 音之网
   description: 无法闪避
+  num: 3052
   image_link: =DISPIMG("ID_226CECC1A90D42CA97106A458D22E1B5",1)
