--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@test-battle/schema": "workspace:^",
     "@test-battle/server": "workspace:^",
     "commander": "^13.1.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "pino": "^9.6.0",
     "socket.io": "^4.8.1",
     "yaml": "^2.7.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
