--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -22,8 +22,11 @@
     "@test-battle/const": "workspace:^",
     "@test-battle/protocol": "workspace:^",
     "@test-battle/schema": "workspace:^",
+    "@types/lodash": "^4.17.15",
+    "@vueuse/core": "^12.7.0",
     "axios": "^1.8.1",
     "element-plus": "^2.9.4",
+    "lodash": "^4.17.21",
     "nanoid": "^5.0.9",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
