--- a/data/mark_global.yaml
+++ b/data/mark_global.yaml
@@ -6,6 +6,11 @@
 - id: mark_global_qingtian
   name: 晴天
   description: 草系和光系精灵使用本系技能时伤害提高35%
+  config:
+    persistent: true
+    stackable: false
+    stackStrategy: extend
+    destoyable: true
   num: 20001
   image_link: =DISPIMG("ID_12DB04AF388F4693931C990CEA4102A3",1)
 - id: mark_global_yutian
