--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -2,9 +2,15 @@
 # yaml-language-server: $schema=../packages/schema/schema/mark.schema.json
 # @metaType mark
 # @version 1.0.0
+
 - id: mark_ability_zhongjie
   name: 终结
   description: 体力低于1/4以下时消耗弱点记号的技能造成的伤害增加25%
+  config:
+    persistent: true
+    stackable: false
+    stackStrategy: extend
+    destoyable: true
 - id: mark_ability_yanhuo
   name: 炎火
   description: 体力低于1/4以下时火系技能造成的伤害增加25%
