--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["ESNext"],
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "outDir": "../../dist/schema",
+    "outDir": "./dist/",
     "verbatimModuleSyntax": true,
     "declaration": true,
     "declarationMap": true,
