--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "generate": "pnpm --filter @test-battle/schema run generate",
-    "cli": "tsx ./bin/cli.ts"
+    "cli": "tsx ./bin/cli.ts",
+    "test": "jest -verbose",
+    "build": "pnpm -r --filter=./packages/* run build",
+    "build:watch": "pnpm -r --filter=./packages/* run build:watch"
   },
   "dependencies": {
     "@test-battle/battle": "workspace:^",
@@ -25,6 +28,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.11.5",
+    "@swc/helpers": "^0.5.15",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
@@ -37,6 +43,7 @@
     "jest": "^29.7.0",
     "prettier": "3.5.1",
     "ts-jest": "^29.2.5",
+    "tsconfig-to-swcconfig": "^2.8.1",
     "tslib": "^2.8.1",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
