--- a/packages/consoleClient/tsconfig.json
+++ b/packages/consoleClient/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["ESNext"],
     "module": "ESNext",
     "target": "ESNext",
-    "outDir": "../../dist/consoleClient",
+    "outDir": "./dist/",
     "verbatimModuleSyntax": true,
     "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true,
