--- a/packages/const/package.json
+++ b/packages/const/package.json
@@ -5,5 +5,9 @@
   "keywords": [],
   "author": "yuuinih",
   "license": "MIT",
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "build": "tsc",
+    "build:watch": "swc ./ -d dist --watch --config-file=../../.swcrc"
+  }
 }
