--- a/packages/console/tsconfig.json
+++ b/packages/console/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["ESNext"],
     "module": "ESNext",
     "target": "ESNext",
-    "outDir": "./dist/",
+    "outDir": "../../dist/console",
     "verbatimModuleSyntax": true,
     "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true,
