--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "pino": "^9.6.0",
     "socket.io": "^4.8.1",
+    "ts-morph": "^25.0.1",
     "yaml": "^2.7.0",
     "zod": "^3.24.2"
   },
