--- a/packages/effectBuilder/tsconfig.json
+++ b/packages/effectBuilder/tsconfig.json
@@ -14,6 +14,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*"],
+  "include": ["./*", "./type-metadata.json"],
   "exclude": ["./node_modules"]
 }
