--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -21,6 +21,7 @@
     "@faker-js/faker": "^9.5.0",
     "@test-battle/client": "workspace:^",
     "@test-battle/const": "workspace:^",
+    "@test-battle/effect-dsl": "workspace:^",
     "@test-battle/protocol": "workspace:^",
     "@test-battle/schema": "workspace:^",
     "@types/lodash": "^4.17.15",
