--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "schema/mark.schema.json": ["./data/mark.yaml", "./data/mark_*.yaml"],
     "schema/skill.schema.json": ["./data/skill.yaml", "./data/skill_*.yaml"],
     "schema/species.schema.json": ["./data/species.yaml", "./data/species_*.yaml"]
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
