--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -181,3 +181,47 @@
   apply:
     type: stun
     target: usingSkillContext
+- id: effect_silence
+  trigger: BeforeUseSkillCheck
+  priority: 0
+  condition:
+    type: every
+    conditions:
+      - type: checkSelf
+      - type: not
+        condition:
+          type: evaluate
+          target:
+            base: usingSkillContext
+            chain:
+              - type: selectPath
+                arg: category
+          evaluator:
+            type: same
+            value:
+              type: raw:string
+              value: Status
+  apply:
+    type: setSureMiss
+    priority: 1
+    target: usingSkillContext
+- id: effect_turn_damage
+  trigger: TurnEnd
+  priority: 0
+  apply:
+    type: dealDamage
+    target:
+      base: self
+    value:
+      type: dynamic
+      selector:
+        base: self
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: maxhp
+          - type: divide
+            arg:
+              type: raw:number
+              value: 8
